--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "MEDSEEK common config module",
   "main": "./lib/index.js",
+  "private": true,
   "directories": {
     "test": "test"
   },
