--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "MEDSEEK, Inc.",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "nconf": "~0.6.8"
+    "nconf": "~0.6.8",
+    "optimist": "~0.6.1"
   }
 }
